--- a/index.html
+++ b/index.html
@@ -5,7 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
-    <link rel="stylesheet" href="pages/index.css"/>
+    <!-- <link rel="stylesheet" href="pages/index.css"/> -->
+    <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
+    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
+    <link rel="stylesheet" type="text/css" href="source/root/root.css">
+    <link rel="stylesheet" type="text/css" href="source/container/container.csss">
+    <link rel="stylesheet" type="text/css" href="source/header/__container/header__container.css">
+    <link rel="stylesheet" type="text/css" href="source/header/header.css">
+    <link rel="stylesheet" type="text/css" href="source/header/__search/header__search.css">
+    <link rel="stylesheet" type="text/css" href="source/logo/__img/logo__img.css">
+    <link rel="stylesheet" type="text/css" href="source/search/search.css">
+    <link rel="stylesheet" type="text/css" href="source/search/__button/search__button.css">
+    <link rel="stylesheet" type="text/css" href="source/search/__icon/search__icon.css">
+    <link rel="stylesheet" type="text/css" href="source/search/__input/search__input.css">
+    <link rel="stylesheet" type="text/css" href="source/notifier/notifier.css">
+    <link rel="stylesheet" type="text/css" href="source/notifier/_hidden/notifier_hidden.css">
+    <link rel="stylesheet" type="text/css" href="source/separator/separator.css">
+    <link rel="stylesheet" type="text/css" href="source/horizontal-separator/horizontal-separator.css">
+    <link rel="stylesheet" type="text/css" href="source/header/__horizontal-separator/header__horizontal-separator.css">
+    <link rel="stylesheet" type="text/css" href="source/profile-button/profile-button.css">
+    <link rel="stylesheet" type="text/css" href="source/header/__profile-button/header__profile-button.css">
+    <link rel="stylesheet" type="text/css" href="source/profile-button/__name/profile-button__name.css">
+    <link rel="stylesheet" type="text/css" href="source/profile-button/__photo/profile-button__photo.css">
+    <link rel="stylesheet" type="text/css" href="source/profile-button/__icon/profile-button__icon.css">
+    <link rel="stylesheet" type="text/css" href="source/content/content.css">
+    <link rel="stylesheet" type="text/css" href="source/partners/partners.css">
+    <link rel="stylesheet" type="text/css" href="source/partners/__grid/partners__grid.css">
+    <link rel="stylesheet" type="text/css" href="source/section-title/section-title.css">
+    <link rel="stylesheet" type="text/css" href="source/partners/__section-title/partners__section-title.css">
+    <link rel="stylesheet" type="text/css" href="source/partner/partner.css">
+    <link rel="stylesheet" type="text/css" href="source/partner/__logo/partner__logo.css">
+
+
   </head>
   <body class="root">
     <header class="header">
