--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
     <link rel="stylesheet" type="text/css" href="source/root/root.css">
     <link rel="stylesheet" type="text/css" href="source/container/container.csss">
-    <link rel="stylesheet" type="text/css" href="source/header/__container/header__container.css">
+    <link rel="stylesheet" type="text/css" href="source/header/container/headerContainer.css">
     <link rel="stylesheet" type="text/css" href="source/header/header.css">
-    <link rel="stylesheet" type="text/css" href="source/header/__search/header__search.css">
-    <link rel="stylesheet" type="text/css" href="source/logo/__img/logo__img.css">
+    <link rel="stylesheet" type="text/css" href="source/header/search/headerSearch.css">
+    <link rel="stylesheet" type="text/css" href="source/logo/img/logoImg.css">
     <link rel="stylesheet" type="text/css" href="source/search/search.css">
-    <link rel="stylesheet" type="text/css" href="source/search/__button/search__button.css">
-    <link rel="stylesheet" type="text/css" href="source/search/__icon/search__icon.css">
+    <link rel="stylesheet" type="text/css" href="source/search/button/searchButton.css">
+    <link rel="stylesheet" type="text/css" href="source/search/icon/searchIcon.css">
     <link rel="stylesheet" type="text/css" href="source/search/__input/search__input.css">
     <link rel="stylesheet" type="text/css" href="source/notifier/notifier.css">
     <link rel="stylesheet" type="text/css" href="source/notifier/_hidden/notifier_hidden.css">
