--- a/index.html
+++ b/index.html
@@ -5,37 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Static Template</title>
-    <!-- <link rel="stylesheet" href="pages/index.css"/> -->
-    <link rel="stylesheet" type="text/css" href="vendor/normalize.css">
-    <link rel="stylesheet" type="text/css" href="fonts/fonts.css">
-    <link rel="stylesheet" type="text/css" href="source/root/root.css">
-    <link rel="stylesheet" type="text/css" href="source/container/container.csss">
-    <link rel="stylesheet" type="text/css" href="source/header/container/headerContainer.css">
-    <link rel="stylesheet" type="text/css" href="source/header/header.css">
-    <link rel="stylesheet" type="text/css" href="source/header/search/headerSearch.css">
-    <link rel="stylesheet" type="text/css" href="source/logo/img/logoImg.css">
-    <link rel="stylesheet" type="text/css" href="source/search/search.css">
-    <link rel="stylesheet" type="text/css" href="source/search/button/searchButton.css">
-    <link rel="stylesheet" type="text/css" href="source/search/icon/searchIcon.css">
-    <link rel="stylesheet" type="text/css" href="source/search/input/searchInput.css">
-    <link rel="stylesheet" type="text/css" href="source/notifier/notifier.css">
-    <link rel="stylesheet" type="text/css" href="source/notifier/hidden/notifierHidden.css">
-    <link rel="stylesheet" type="text/css" href="source/separator/separator.css">
-    <link rel="stylesheet" type="text/css" href="source/horizontalSeparator1/horizontalSeparator.css">
-    <link rel="stylesheet" type="text/css" href="source/header/horizontalSeparator/headerHorizontalSeparator.css">
-    <link rel="stylesheet" type="text/css" href="source/profileButton/profileButton.css">
-    <link rel="stylesheet" type="text/css" href="source/header/profileButton/headerProfileButton.css">
-    <link rel="stylesheet" type="text/css" href="source/profileButton/name/profileButtonName.css">
-    <link rel="stylesheet" type="text/css" href="source/profileButton/photo/profileButtonPhoto.css">
-    <link rel="stylesheet" type="text/css" href="source/profileButton/icon/profileButtonIcon.css">
-    <link rel="stylesheet" type="text/css" href="source/content/content.css">
-    <link rel="stylesheet" type="text/css" href="source/partners/partners.css">
-    <link rel="stylesheet" type="text/css" href="source/partners/grid/partnersGrid.css">
-    <link rel="stylesheet" type="text/css" href="source/sectionTitle/sectionTitle.css">
-    <link rel="stylesheet" type="text/css" href="source/partners/sectionTitle/partnersSectionTitle.css">
-    <link rel="stylesheet" type="text/css" href="source/partner/partner.css">
-    <link rel="stylesheet" type="text/css" href="source/partner/logo/partnerLogo.css">
-
+    <link rel="stylesheet" href="source/pages/index.css"/>
 
   </head>
   <body class="root">
