--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <body class="root">
     <header class="header">
       <div class="container header__container">
-        <a href="!#" class="logo">
+        <a href="#" class="logo">
           <img src="images/logo.svg" alt="логотип" class="logo__img"/>
         </a>
 
